grammar.js
    source_file: ($) => repeat($._top_item),

    _top_item: ($) => choice($.start_marker, $.end_marker, $._macro_body),

    _macro_body: ($) =>
      choice(
        // Label-only line
        seq($.jump_to, $._eol),

        // Normal statement line
        seq(
          optional($.jump_to),
          choice(
            prec(PREC.parenthesized, $.parenthesis),
            $.expression,
            $.loop,
            $.input,
            $.file_operation,
            $.jump,
            $.esc_statement,
          ),
          optional($._eol),
        ),

        // IF handles its own structure.
        $.condition,
      ),

    _eol: ($) => /\r?\n/,
    expression: ($) =>
      choice(
        $.definition,
        $.echo,
        $.wait,
        $.warte,
        $.guidance_noarg,
        $.menu,
        $.logic_operation,
        $.function,
        $.string_function,
        $.system_function,
      ),

    parenthesis: ($) => seq("(", repeat($._macro_body), ")"),

    echo: ($) => seq($.echo_kw, token(prec(PREC.echo_text, /[^\n\r]+/))),
    wait: ($) =>
      seq(
        $.wait_kw,
        choice(
          $.num_variable,
          $.char_variable,
          token(prec(PREC.echo, /[^\n\r]+/)),
        ),
      ),

    warte: ($) => seq($.warte_kw, $.int),

    definition: ($) =>
      choice($.num_definition, $.char_definition, $.assignment),

    num_definition: ($) =>
      seq($.num_variable, choice(...assignment_operator), $.arithmetic),

    char_definition: ($) =>
      seq(
        $.char_variable,
        choice(...assignment_operator),
        choice($.free_text, $.char_literal, $.char_value),
      ),

    assignment: ($) =>
      choice(
        seq($.vai_kw, $.num_variable, optional(/.*/)),
        seq(
          $.var_kw,
          choice(
            $.num_variable,
            $.char_variable,
            $.point_literal,
            $.line_literal,
          ),
          optional(/.*/),
        ),
        seq(
          $.pfd_kw,
          choice($.char_variable, $.path_indicator, $.file_extension),
        ),
        seq($.del_kw, choice($.char_variable, $.num_variable)),
      ),

    arithmetic: ($) =>
      choice(
        $.binary_operator,
        $.unary_operator,
        $.parenthesized_expression,
        $.arithmetic_function,
        $.special2Dvariable,
        $.num_value,
        $.num_variable,
        $.num_sys_var,
        $.val_function,
        $.len_function,
        $.idx_function,
        $.asc_function,
        $.general_variable,
      ),

    num_variable: ($) => seq($.num_var_sign, $.num_var_name),

    general_variable: ($) =>
      token(prec(PREC.general, /([A-Z]|[a-z])([A-Z]|[a-z]|[0-9]|_){0,29}/)),

    num_value: ($) => choice($.real, $.int),

    real: ($) => /[+-]?([0-9]*[.])?[0-9]+/,

    int: ($) => token(/([0-9]|[1-9][0-9])/),

    char_variable: ($) =>
      prec.right(
        PREC.char,
        seq($.char_var_sign, $.identifier, optional($.char_operand)),
      ),

    char_value: ($) =>
      choice(
        $.windows_path,
        $.quoted_char,
        $.concat_char,
        $.char_variable,
        $.char_sys_var,
        $.string_function,
      ),

    quoted_char: ($) =>
      seq('"', optional($._quoted_char_content), token.immediate('"')),

    _quoted_char_content: ($) => token.immediate(/[^"\n\r]+/),

    char_literal: ($) => token(prec(PREC.literals, /[^$%\s"()]+/)),

    binary_operator: ($) => {
      const arithmetic_operators = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "/", PREC.times],
        [prec.left, "*", PREC.times],
        [prec.left, "^", PREC.power],
      ];

      return choice(
        ...arithmetic_operators.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.arithmetic),
              field("operator", operator),
              field("right", $.arithmetic),
            ),
          ),
        ),
      );
    },

    num_sys_var: ($) => /@([A-Z]|[a-z]|[0-9]){1,3}/,

    char_sys_var: ($) => /\$@([A-Z]|[a-z]|[0-9]){1,3}/,

    condition: ($) =>
      prec(
        PREC.flow,
        choice(
          // Inline IF: IF <cond> GOTO <label>
          seq(
            $.if_kw,
            $.logical_expression,
            prec(PREC.jump, $.jump),
            optional($._eol),
          ),

          // Block IF: IF <cond> THEN ... IFEND
          seq($.if_kw, $.logical_expression, $.then_kw, $.condition_alt),
        ),
      ),

    condition_alt: ($) =>
      choice(
        seq(optional($.condition_block), $.ifend_kw),
        $.condition_alt_case,
      ),

    condition_alt_case: ($) =>
      seq(
        optional($.condition_block),
        $.else_kw,
        optional($.condition_block),
        $.ifend_kw,
      ),

    condition_block: ($) =>
      repeat1(
        choice(
          prec(PREC.parenthesized, $.parenthesis),
          $.expression,
          $.condition,
          $.loop,
          $.input,
          $.jump,
          $.jump_to,
          $.file_operation,
        ),
      ),

    logical_expression: ($) =>
      prec.left(
        seq(
          optional($.negation),
          $.comparison,
          repeat(seq($.logical_op, $.comparison)),
        ),
      ),

    comparison: ($) =>
      prec(
        PREC.flow,
        choice($.num_comparison, $.char_comparison, $.logical_var, $.flow_args),
      ),

    num_comparison: ($) =>
      prec(
        PREC.arithmetic,
        seq($.arithmetic, $.comparative_operator, $.arithmetic),
      ),

    char_comparison: ($) =>
      prec(
        PREC.char,
        seq($.char_expression, $.comparative_operator, $.char_expression),
      ),

    comparative_operator: ($) => choice(...comparative_operators),

    // Conservative OPTION handling:
    // OPTION is treated as a simple command, not an implicit block.
    menu: ($) =>
      prec(
        PREC.menu,
        seq($.option_kw, choice(seq($.menu_index, $.menu_code), esc_kw)),
      ),

    input: ($) => choice($.scal_input, $.point, $.distance, $.angle),

    scal_input: ($) => seq($.scalar_in, $.scal_value),
    path_indicator: ($) => /([A-Z]|[0-9]|#):/,

    file_extension: ($) => /&:\.SZA/,

    function: ($) => seq($.function_c, choice($.char_variable, $.hc_path)),

    jump: ($) => seq($.goto_kw, $.label),
    label: ($) => /[0-9]{1,6}/,

    jump_to: ($) => seq($.label, ":"),

    point_literal: ($) => /P[0-9]/,
    line_literal: ($) => /L[0-9]/,

    comment: ($) => token(prec(PREC.comment, /REM.*/i)),
